[project]
name = "browser-use-hud-environment"
version = "0.1.0"
description = "HUD Environment wrapping Browser Use action primitives"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hud-python>=0.5.26",
    "browser-use==0.11.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.hud]
name = "browser-use-hud-environment"

[tool.setuptools]
py-modules = ["env"]
